# wecc-renewables

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  Makefile  README.md  environment.yml  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
data/: renewables_gwl_reference.csv
derived_products/: all_detect_resource_drought.py  all_monthly_count_resource_drought.py  all_resource_drought_reference.py
derived_products/slurm/: all-detect_rsrc_drought.sbatch  all-monthly_count_rsrc_drought.sbatch  all-rsrc_drought_reference.sbatch  mk-gwl-list.bash
notebooks/: all_03_mk_rev_project_points.ipynb
rev_configs/: README.md  d02_all_points.csv  distributed_pvwattsv8.json  offshore_windturbines_d03.json  onshore_windturbines_d02.json  onshore_windturbines_d03.json  pv_d02_distributed_projectpoints.csv  pv_d02_utility_projectpoints.csv  pv_d03_distributed_projectpoints.csv  pv_d03_utility_projectpoints.csv  pv_distributed_config_collect.json  pv_distributed_config_gen.json  pv_distributed_config_pipeline.json  pv_utility_config_collect.json  pv_utility_config_pipeline.json  utility_pvwattsv8.json  wind_d02_offshore_projectpoints.csv  wind_d02_onshore_projectpoints.csv  wind_d03_offshore_projectpoints.csv  wind_d03_onshore_projectpoints.csv  wind_offshore_config_collect.json  wind_offshore_config_gen.json  wind_offshore_config_pipeline.json  wind_onshore_config_collect.json  wind_onshore_config_gen.json  wind_onshore_config_pipeline.json
scripts/: README.md  all-01_meta_node_create.sbatch  all-02_lulc_exclusions.sbatch  all-generation_output_to_zarr.sbatch  all-hourly_to_daily.sbatch  check_failed_rev_logs.sh  misc-edit_pv_configs.sbatch  misc-edit_wind_configs.sbatch  mk-agg-list.bash  mk-batch.bash  mk-package-list.bash  pv-profiles_to_catalog.sbatch  pv-resource_to_h5.sbatch  wind-00_create_json.sbatch  wind-01a_hourly_resource_from_json.sbatch  wind-01b_fix_year_hourly_resource_from_json.sbatch  wind-02a_concat_hourly_resource.sbatch  wind-02b_check_zarr_s3_sizes.sbatch  wind-03_resource_to_h5.sbatch  wind-03a_delete_hourly.sbatch  wind-03b_resource_to_h5.sbatch  wind-profiles_to_catalog.sbatch  wind_01b_count_hourly_files.sh
src/: __init__.py  _version.py  constants.py  ds_to_h5.py  utils.py  wind_to_resource_functions.py  zarr_to_pv_resource.py
src/postprocess/: __init__.py  all_generation_output_to_zarr.py  all_hourly_to_daily.py  pv_profiles_to_catalog.py  wind_profiles_to_catalog.py
src/preprocess/: __init__.py  all_01_meta_node_create.py  all_02_lulc_exclusions.py  misc_edit_pv_configs.py  misc_edit_wind_configs.py  plot_helpers.py  pv_resource_to_h5.py  wind_00_create_json.py  wind_01a_hourly_resource_from_json.py  wind_02a_concat_hourly_resource.py  wind_03b_resource_to_h5.py
tests/: __init__.py  conftest.py  test_constants.py  test_ds_to_h5.py  test_utils.py  test_zarr_to_pv_resource.py
tests/preprocess/: __init__.py  test_all_02_lulc_exclusions.py  test_plot_helpers.py  test_pv_resource_to_h5.py  test_wind_00_create_json.py
